Fix hero height on mobile

--- a/src/pages/Home/Hero/styles.module.scss
+++ b/src/pages/Home/Hero/styles.module.scss
@@ -4,6 +4,8 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  /* on mobile, viewport height may be larger than the actual visible part */ 
+  height: -webkit-fill-available;
   overflow: hidden;
 
   .background {
